Parse/IMPParser.py
# Generated from IMP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from Tree import *
import pdb
import sys


class IMPParser ( Parser ):

    grammarFileName = "IMP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'skip'", "':='", "'begin'", "'end'", 
                     "'if'", "'then'", "'else'", "'while'", "'do'", "'assert'", 
                     "'{'", "'}'", "'=>'", "'<=>'", "'or'", "'and'", "'true'", 
                     "'false'", "'forall'", "'.'", "'exists'", "'not'", 
                     "'('", "')'", "'<'", "'<='", "'='", "'!='", "'>='", 
                     "'>'", "'+'", "'-'", "'*'", "'/'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IDENT", "INT", "WS" ]

    RULE_program = 0
    RULE_statementlist = 1
    RULE_statement = 2
    RULE_assertion = 3
    RULE_boolexp = 4
    RULE_boolterm = 5
    RULE_boolterm2 = 6
    RULE_boolfactor = 7
    RULE_compexp = 8
    RULE_arithexp = 9
    RULE_arithterm = 10
    RULE_arithfactor = 11
    RULE_arithexplist = 12
    RULE_ident = 13
    RULE_integer = 14

    ruleNames =  [ "program", "statementlist", "statement", "assertion", 
                   "boolexp", "boolterm", "boolterm2", "boolfactor", "compexp", 
                   "arithexp", "arithterm", "arithfactor", "arithexplist", 
                   "ident", "integer" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    IDENT=37
    INT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.pre = None # AssertionContext
            self.st = None # StatementlistContext
            self._statementlist = None # StatementlistContext
            self.post = None # AssertionContext

        def assertion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.AssertionContext)
            else:
                return self.getTypedRuleContext(IMPParser.AssertionContext,i)


        def statementlist(self):
            return self.getTypedRuleContext(IMPParser.StatementlistContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = IMPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            localctx.pre = self.assertion()
            self.state = 31
            localctx.st = localctx._statementlist = self.statementlist()
            self.state = 32
            localctx.post = self.assertion()

            # FIXME: Construct and print verification condition instead
            wp = localctx._statementlist.tree.wp(localctx.post.tree)
            localctx.pre.tree.print() 
            sys.stdout.write(" => ")
            wp.print()
            sys.stdout.write("\n")
            sys.stdout.flush()

            		
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self._statement = None # StatementContext
            self._statementlist = None # StatementlistContext

        def statement(self):
            return self.getTypedRuleContext(IMPParser.StatementContext,0)


        def statementlist(self):
            return self.getTypedRuleContext(IMPParser.StatementlistContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_statementlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementlist" ):
                listener.enterStatementlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementlist" ):
                listener.exitStatementlist(self)




    def statementlist(self):

        localctx = IMPParser.StatementlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementlist)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                localctx._statement = self.statement()
                localctx.tree = localctx._statement.tree
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                localctx._statement = self.statement()
                self.state = 39
                self.match(IMPParser.T__0)
                self.state = 40
                localctx._statementlist = self.statementlist()
                localctx.tree = CompoundStmt(localctx._statement.tree, localctx._statementlist.tree)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self._ident = None # IdentContext
            self._arithexp = None # ArithexpContext
            self._statementlist = None # StatementlistContext
            self._boolterm = None # BooltermContext
            self.s1 = None # StatementContext
            self.s2 = None # StatementContext
            self.inv = None # AssertionContext
            self.t3 = None # BooltermContext
            self.st = None # StatementContext
            self._assertion = None # AssertionContext

        def ident(self):
            return self.getTypedRuleContext(IMPParser.IdentContext,0)


        def arithexp(self):
            return self.getTypedRuleContext(IMPParser.ArithexpContext,0)


        def statementlist(self):
            return self.getTypedRuleContext(IMPParser.StatementlistContext,0)


        def boolterm(self):
            return self.getTypedRuleContext(IMPParser.BooltermContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.StatementContext)
            else:
                return self.getTypedRuleContext(IMPParser.StatementContext,i)


        def assertion(self):
            return self.getTypedRuleContext(IMPParser.AssertionContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = IMPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(IMPParser.T__1)
                localctx.tree = SkipStmt()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                localctx._ident = self.ident()
                self.state = 48
                self.match(IMPParser.T__2)
                self.state = 49
                localctx._arithexp = self.arithexp(0)
                localctx.tree = AssignStmt(localctx._ident.name, localctx._arithexp.tree)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.match(IMPParser.T__3)
                self.state = 53
                localctx._statementlist = self.statementlist()
                self.state = 54
                self.match(IMPParser.T__4)
                localctx.tree = localctx._statementlist.tree
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(IMPParser.T__5)
                self.state = 58
                localctx._boolterm = self.boolterm(0)
                self.state = 59
                self.match(IMPParser.T__6)
                self.state = 60
                localctx.s1 = self.statement()
                self.state = 61
                self.match(IMPParser.T__7)
                self.state = 62
                localctx.s2 = self.statement()
                localctx.tree = IfStmt(localctx._boolterm.tree, localctx.s1.tree, localctx.s2.tree)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 65
                localctx.inv = self.assertion()
                self.state = 66
                self.match(IMPParser.T__8)
                self.state = 67
                localctx.t3 = self.boolterm(0)
                self.state = 68
                self.match(IMPParser.T__9)
                self.state = 69
                localctx.st = self.statement()
                localctx.tree = WhileStmt(localctx.inv.tree, localctx.t3.tree, localctx.st.tree)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.match(IMPParser.T__10)
                self.state = 73
                localctx._assertion = self.assertion()
                localctx.tree = AssertStmt(localctx._assertion.tree)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self._boolexp = None # BoolexpContext

        def boolexp(self):
            return self.getTypedRuleContext(IMPParser.BoolexpContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_assertion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertion" ):
                listener.enterAssertion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertion" ):
                listener.exitAssertion(self)




    def assertion(self):

        localctx = IMPParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assertion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(IMPParser.T__11)
            self.state = 79
            localctx._boolexp = self.boolexp()
            self.state = 80
            self.match(IMPParser.T__12)
            localctx.tree = localctx._boolexp.tree
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolexpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self._boolterm = None # BooltermContext
            self.t1 = None # BooltermContext
            self.t2 = None # BooltermContext

        def boolterm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.BooltermContext)
            else:
                return self.getTypedRuleContext(IMPParser.BooltermContext,i)


        def getRuleIndex(self):
            return IMPParser.RULE_boolexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolexp" ):
                listener.enterBoolexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolexp" ):
                listener.exitBoolexp(self)




    def boolexp(self):

        localctx = IMPParser.BoolexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_boolexp)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                localctx._boolterm = self.boolterm(0)
                localctx.tree = localctx._boolterm.tree
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                localctx.t1 = self.boolterm(0)
                self.state = 87
                self.match(IMPParser.T__13)
                self.state = 88
                localctx.t2 = self.boolterm(0)
                localctx.tree = OpExp(localctx.t1.tree,OpExp.Op.IMP,localctx.t2.tree)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                localctx.t1 = self.boolterm(0)
                self.state = 92
                self.match(IMPParser.T__14)
                self.state = 93
                localctx.t2 = self.boolterm(0)
                localctx.tree = OpExp(localctx.t1.tree,OpExp.Op.EQV,localctx.t2.tree)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooltermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self.t1 = None # BooltermContext
            self._boolterm2 = None # Boolterm2Context
            self.t2 = None # Boolterm2Context

        def boolterm2(self):
            return self.getTypedRuleContext(IMPParser.Boolterm2Context,0)


        def boolterm(self):
            return self.getTypedRuleContext(IMPParser.BooltermContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_boolterm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolterm" ):
                listener.enterBoolterm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolterm" ):
                listener.exitBoolterm(self)



    def boolterm(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = IMPParser.BooltermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_boolterm, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            localctx._boolterm2 = self.boolterm2(0)
            localctx.tree = localctx._boolterm2.tree
            self._ctx.stop = self._input.LT(-1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = IMPParser.BooltermContext(self, _parentctx, _parentState)
                    localctx.t1 = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_boolterm)
                    self.state = 102
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 103
                    self.match(IMPParser.T__15)
                    self.state = 104
                    localctx.t2 = localctx._boolterm2 = self.boolterm2(0)
                    localctx.tree = OpExp(localctx.t1.tree,OpExp.Op.OR,localctx.t2.tree) 
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Boolterm2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self.t1 = None # Boolterm2Context
            self._boolfactor = None # BoolfactorContext
            self.t2 = None # BoolfactorContext

        def boolfactor(self):
            return self.getTypedRuleContext(IMPParser.BoolfactorContext,0)


        def boolterm2(self):
            return self.getTypedRuleContext(IMPParser.Boolterm2Context,0)


        def getRuleIndex(self):
            return IMPParser.RULE_boolterm2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolterm2" ):
                listener.enterBoolterm2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolterm2" ):
                listener.exitBoolterm2(self)



    def boolterm2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = IMPParser.Boolterm2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_boolterm2, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            localctx._boolfactor = self.boolfactor()
            localctx.tree = localctx._boolfactor.tree
            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = IMPParser.Boolterm2Context(self, _parentctx, _parentState)
                    localctx.t1 = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_boolterm2)
                    self.state = 116
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 117
                    self.match(IMPParser.T__16)
                    self.state = 118
                    localctx.t2 = localctx._boolfactor = self.boolfactor()
                    localctx.tree = OpExp(localctx.t1.tree,OpExp.Op.AND,localctx.t2.tree) 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BoolfactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self._compexp = None # CompexpContext
            self._ident = None # IdentContext
            self._boolexp = None # BoolexpContext
            self._boolfactor = None # BoolfactorContext

        def compexp(self):
            return self.getTypedRuleContext(IMPParser.CompexpContext,0)


        def ident(self):
            return self.getTypedRuleContext(IMPParser.IdentContext,0)


        def boolexp(self):
            return self.getTypedRuleContext(IMPParser.BoolexpContext,0)


        def boolfactor(self):
            return self.getTypedRuleContext(IMPParser.BoolfactorContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_boolfactor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolfactor" ):
                listener.enterBoolfactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolfactor" ):
                listener.exitBoolfactor(self)




    def boolfactor(self):

        localctx = IMPParser.BoolfactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_boolfactor)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(IMPParser.T__17)
                localctx.tree = BooleanLit(True)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(IMPParser.T__18)
                localctx.tree = BooleanLit(False)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                localctx._compexp = self.compexp()
                localctx.tree = localctx._compexp.tree
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 133
                self.match(IMPParser.T__19)
                self.state = 134
                localctx._ident = self.ident()
                self.state = 135
                self.match(IMPParser.T__20)
                self.state = 136
                localctx._boolexp = self.boolexp()
                localctx.tree = QuantExp(QuantExp.Quant.FORALL, localctx._ident.name, localctx._boolexp.tree)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.match(IMPParser.T__21)
                self.state = 140
                localctx._ident = self.ident()
                self.state = 141
                self.match(IMPParser.T__20)
                self.state = 142
                localctx._boolexp = self.boolexp()
                localctx.tree = QuantExp(QuantExp.Quant.EXISTS, localctx._ident.name, localctx._boolexp.tree)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 145
                self.match(IMPParser.T__22)
                self.state = 146
                localctx._boolfactor = self.boolfactor()
                localctx.tree = OpExp(None, OpExp.Op.NOT, localctx._boolfactor.tree)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 149
                self.match(IMPParser.T__23)
                self.state = 150
                localctx._boolexp = self.boolexp()
                self.state = 151
                self.match(IMPParser.T__24)
                localctx.tree = localctx._boolexp.tree
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompexpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self.t1 = None # ArithexpContext
            self.t2 = None # ArithexpContext

        def arithexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IMPParser.ArithexpContext)
            else:
                return self.getTypedRuleContext(IMPParser.ArithexpContext,i)


        def getRuleIndex(self):
            return IMPParser.RULE_compexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompexp" ):
                listener.enterCompexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompexp" ):
                listener.exitCompexp(self)




    def compexp(self):

        localctx = IMPParser.CompexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_compexp)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                localctx.t1 = self.arithexp(0)
                self.state = 157
                self.match(IMPParser.T__25)
                self.state = 158
                localctx.t2 = self.arithexp(0)
                localctx.tree = OpExp(localctx.t1.tree, OpExp.Op.LT, localctx.t2.tree)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                localctx.t1 = self.arithexp(0)
                self.state = 162
                self.match(IMPParser.T__26)
                self.state = 163
                localctx.t2 = self.arithexp(0)
                localctx.tree = OpExp(localctx.t1.tree, OpExp.Op.LE, localctx.t2.tree)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                localctx.t1 = self.arithexp(0)
                self.state = 167
                self.match(IMPParser.T__27)
                self.state = 168
                localctx.t2 = self.arithexp(0)
                localctx.tree = OpExp(localctx.t1.tree, OpExp.Op.EQ, localctx.t2.tree)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 171
                localctx.t1 = self.arithexp(0)
                self.state = 172
                self.match(IMPParser.T__28)
                self.state = 173
                localctx.t2 = self.arithexp(0)
                localctx.tree = OpExp(localctx.t1.tree, OpExp.Op.NE, localctx.t2.tree)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 176
                localctx.t1 = self.arithexp(0)
                self.state = 177
                self.match(IMPParser.T__29)
                self.state = 178
                localctx.t2 = self.arithexp(0)
                localctx.tree = OpExp(localctx.t1.tree, OpExp.Op.GE, localctx.t2.tree)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 181
                localctx.t1 = self.arithexp(0)
                self.state = 182
                self.match(IMPParser.T__30)
                self.state = 183
                localctx.t2 = self.arithexp(0)
                localctx.tree = OpExp(localctx.t1.tree, OpExp.Op.GT, localctx.t2.tree)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithexpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tree = None
            self.t1 = None # ArithexpContext
            self._arithterm = None # ArithtermContext
            self.t2 = None # ArithtermContext

        def arithterm(self):
            return self.getTypedRuleContext(IMPParser.ArithtermContext,0)


        def arithexp(self):
            return self.getTypedRuleContext(IMPParser.ArithexpContext,0)


        def getRuleIndex(self):
            return IMPParser.RULE_arithexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithexp" ):
                listener.enterArithexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithexp" ):
                listener.exitArithexp(self)


